@startuml

title __SEMESTRALKAVAMZ.APP's Class Diagram__\n

  namespace com.example.semestralkavamz {
    class com.example.semestralkavamz.BuildConfig {
    }
  }
  

  namespace com.example.semestralkavamz {
    namespace Comparators {
      abstract class com.example.semestralkavamz.Comparators.MyNotesComparators {
      }
    }
  }
  

  namespace com.example.semestralkavamz {
    namespace activities {
      class com.example.semestralkavamz.activities.IntroScreenActivity {
      }
    }
  }
  

  namespace com.example.semestralkavamz {
    namespace activities {
      class com.example.semestralkavamz.activities.MainActivity {
      }
    }
  }
  

  namespace com.example.semestralkavamz {
    namespace activities {
      class com.example.semestralkavamz.activities.NewNoteActivity {
      }
    }
  }
  

  namespace com.example.semestralkavamz {
    namespace adapter {
      class com.example.semestralkavamz.adapter.NoteAdapter {
      }
    }
  }
  

  namespace com.example.semestralkavamz {
    namespace data {
      class com.example.semestralkavamz.data.Note {
      }
    }
  }
  

  namespace com.example.semestralkavamz {
    namespace data {
      namespace ase {
        interface com.example.semestralkavamz.database.NoteDao {
        }
      }
    }
  }
  

  namespace com.example.semestralkavamz {
    namespace data {
      namespace ase {
        class com.example.semestralkavamz.database.NoteDao_Impl {
        }
      }
    }
  }
  

  namespace com.example.semestralkavamz {
    namespace data {
      namespace ase {
        abstract class com.example.semestralkavamz.database.NotesDatabase {
        }
      }
    }
  }
  

  namespace com.example.semestralkavamz {
    namespace data {
      namespace ase {
        class com.example.semestralkavamz.database.NotesDatabase_Impl {
        }
      }
    }
  }
  

  namespace com.example.semestralkavamz {
    namespace interfaces {
      interface com.example.semestralkavamz.interfaces.NotesListener {
      }
    }
  }
  

  com.example.semestralkavamz.Comparators.MyNotesComparators .up.|> java.lang.Comparable
  com.example.semestralkavamz.activities.IntroScreenActivity .up.|> com.example.semestralkavamz.interfaces.NotesListener
  com.example.semestralkavamz.activities.IntroScreenActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.semestralkavamz.activities.IntroScreenActivity o-- com.example.semestralkavamz.adapter.NoteAdapter : notesAdapter
  com.example.semestralkavamz.activities.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.semestralkavamz.activities.NewNoteActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.semestralkavamz.activities.NewNoteActivity o-- com.example.semestralkavamz.data.Note : availableNote
  com.example.semestralkavamz.adapter.NoteAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.semestralkavamz.adapter.NoteAdapter o-- com.example.semestralkavamz.interfaces.NotesListener : notesListener
  com.example.semestralkavamz.data.Note .up.|> java.io.Serializable
  com.example.semestralkavamz.database.NoteDao_Impl .up.|> com.example.semestralkavamz.database.NoteDao
  com.example.semestralkavamz.database.NotesDatabase -up-|> androidx.room.RoomDatabase
  com.example.semestralkavamz.database.NotesDatabase_Impl -up-|> com.example.semestralkavamz.database.NotesDatabase
  com.example.semestralkavamz.database.NotesDatabase_Impl o-- com.example.semestralkavamz.database.NoteDao : _noteDao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
